# control_turtlebot

./: README.md  frames_2025-02-19_23.51.54.gv  frames_2025-02-20_20.16.18.gv  frames_2025-02-20_20.17.03.gv  frames_2025-02-20_20.17.31.gv  frames_2025-02-26_16.49.22.gv  frames_2025-02-26_17.37.24.gv  frames_2025-02-26_18.02.40.gv  frames_2025-02-26_18.03.23.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/me495_yolo/lib/me495_yolo/: apriltag_detector  color_tracking  good_square  hsv_tuner  rotate_to_90  square_mover  waypoint_april
install/me495_yolo/share/me495_yolo/: package.bash  package.ps1  package.sh  package.xml  tags.yaml
install/numsr_turtlebot/share/numsr_turtlebot/: package.sh
install/nuturtlebot_msgs/share/nuturtlebot_msgs/: package.sh
install/nuturtlebot_msgs/share/nuturtlebot_msgs/cmake/: export_nuturtlebot_msgs__rosidl_generator_cExport-noconfig.cmake  export_nuturtlebot_msgs__rosidl_generator_cExport.cmake  (+10 more)
log/: latest_build
me495_yolo/: frames_2025-02-14_00.09.20.gv  frames_2025-02-14_00.09.29.gv  frames_2025-02-14_00.11.16.gv  frames_2025-02-17_15.04.19.gv  setup.cfg  setup.py
me495_yolo/install/: local_setup.sh  setup.sh
me495_yolo/log/: latest_build
me495_yolo/me495_yolo/: waypoint.py  waypoint_follower.py  yolo.py
opencv_env/: pyvenv.cfg
src/: README.md
src/me495_yolo/: README.org  setup.py
src/me495_yolo/launch/: apriltag_launch.py
src/me495_yolo/me495_yolo/: apriltag_detector.py  good_square.py  light_trail.py  light_trail_dark.py  rotate_to_90.py  square_mover.py  waypoint.py  waypoint_april.py  waypoint_follower.py  waypoint_hw.py  yolo.py
yolo_training/scripts/: capture_realsense.py
(+25 files in other folders)
